--- a/Portfolio.html
+++ b/Portfolio.html
@@ -110,19 +110,24 @@
         </div>
         <div id="sectionAbout">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                <li class="col-6 nav-item" role="presentation">
+                <li class="col-4 nav-item" role="presentation">
                     <button class="col-12 nav-link fw-bold active" id="pills-about-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-about" type="button" role="tab" aria-controls="pills-home"
                             aria-selected="true">
                         About me
                     </button>
                 </li>
-                <li class="col-6 nav-item" role="presentation">
+                <li class="col-4 nav-item" role="presentation">
+                    <button class="col-12 nav-link fw-bold" onclick="downloadResume()">
+                        Resume
+                    </button>
+                </li>
+                <li class="col-4 nav-item" role="presentation">
                     <button class="col-12 nav-link fw-bold" onclick="openGoogleForm()">
                         <!--id="pills-contact-tab" data-bs-toggle="pill"
-                    data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
-                    aria-selected="false"-->
-                        Click here to write to me
+            data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
+            aria-selected="false"-->
+                        Write to me
                     </button>
                 </li>
             </ul>
@@ -295,7 +300,7 @@
                                     <div class="row">
                                         <div class="col-12 p-1">
                                             <div class="card border-0 p-3 shadow border-top border-5 rounded">
-                                                <img src="paper.png" class="card-img-top" alt="Project 1">
+                                                <img src="react.jpg" class="card-img-top" alt="Project 1">
                                             </div>
                                         </div>
                                     </div>
@@ -472,7 +477,7 @@
                                     <div class="row">
                                         <div class="col-12 p-1">
                                             <div class="card border-0 p-3 shadow border-top border-5 rounded">
-                                                <img src="paper.png" class="card-img-top" alt="Project 1">
+                                                <img src="aspNetCoreMVC.jpg" class="card-img-top" alt="Project 1">
                                             </div>
                                         </div>
                                     </div>
@@ -597,12 +602,12 @@
                                                                     </div>
                                                                     <div class="col-lg-6 col-sm-12">
 
-                                                                        <h5>Frontend (React + Redux)</h5>
+                                                                        <h5>Frontend (Razor View)</h5>
                                                                         <ul>
-                                                                            <li><strong>Components</strong>: Reusable UI elements built with Material UI.</li>
-                                                                            <li><strong>Redux Store</strong>: Centralized state management.</li>
-                                                                            <li><strong>Actions</strong>: Dispatch actions to modify the state.</li>
-                                                                            <li><strong>Reducers</strong>: Handle state changes based on actions.</li>
+                                                                            <li><strong>Views</strong>: Define the UI elements and layout, typically using Razor syntax.</li>
+                                                                            <li><strong>Razor Syntax</strong>: Allows embedding server-side C# code within HTML.</li>
+                                                                            <li><strong>Partial Views</strong>: Reusable view components that can be embedded within other views.</li>
+                                                                            <li><strong>Tag Helpers</strong>: Enable server-side code to participate in creating and rendering HTML elements.</li>
                                                                         </ul>
 
                                                                     </div>
@@ -643,7 +648,7 @@
                                     <div class="row">
                                         <div class="col-12 p-2">
                                             <div class="card border-0 p-1 shadow border-top border-5 rounded">
-                                                <img src="paper.png" class="card-img-top" alt="Project 1">
+                                                <img src="angular.jpg" class="card-img-top" alt="Project 1">
                                             </div>
                                         </div>
                                     </div>
@@ -813,7 +818,9 @@
                             <div class="card-body">
                                 <h5 class="card-title">Diploma (Polytechnic)</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Govt. Polytechnic College, 2015 - 2018</h6>
-                                <p class="card-text">Mathematics, C Programming, and MS Office.</p>
+                                <p class="card-text">
+                                Key Subjects: Mathematics, C Programming, and MS Office.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -841,7 +848,16 @@
                             <div class="card-body">
                                 <h5 class="card-title">Software Intern</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Tata Consultancy Services, Bangalore. 2020 - 2021</h6>
-                                <p class="card-text">Assisted in the development of client-side and server-side web applications. Gained experience in working with databases, debugging, and testing software solutions.</p>
+                                <p class="card-text">Introduced to the development of client-side and server-side web applications. Gained experience in working with databases, debugging, and testing software solutions.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Subjecct Matter Expert, Freelancer</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Chegg Inc, Remote. 2018 - 2021</h6>
+                                <p class="card-text">Provided detailed and accurate answers to student queries in Programming and Electrical Engineering, ensuring clarity and comprehension. Fostered a supportive and encouraging learning environment by addressing student questions and concerns with patience and empathy.</p>
                             </div>
                         </div>
                     </div>
